--- a/index.html
+++ b/index.html
@@ -4,37 +4,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="app.css">
   <title>Advice-O-Tron 5000</title>
 </head>
 
 <body>
-  <header class="main-head">
-    <h1>Advice-O-Tron 5000 <span>advice when you need it</span></h1>
-  </header>
-  <article class="content">
-    <h2>Here is some advice...</h2>
-    <p id="advice"></p>
-    <a href="#" id="tweet-button" target="_blank"><button>Tweet</button></a>
-  </article>
-  <aside class="side">
-    <h2>Why use Advice-O-Tron 5000?</h2>
-    <section>
-      <h3>Reason #1</h3>
-      <p>Find yourself stranded alone somewhere and need advice? You're in luck!</p>
-    </section>
-    <section>
-      <h3>Reason #2</h3>
-      <p>Random advice is always better than no advice at all.</p>
-    </section>
-    <section>
-      <h3>Reason #3</h3>
-      <p>It's scientifically proven that giving random advice is a lot easier than taking advice.</p>
-    </section>
-  </aside>
-  <footer class="main-footer">
-    <p>A freeCodeCamp Chicago Local Study Group jam.</p>
-  </footer>
-
+  <div class="wrapper">
+    <header class="main-head">
+      <h1>Advice-O-Tron 5000 <span>advice when you need it</span></h1>
+    </header>
+    <article class="content">
+      <h2>Here is some advice...</h2>
+      <p id="advice"></p>
+      <a href="#" id="tweet-button" target="_blank"><button>Tweet</button></a>
+    </article>
+    <aside class="side">
+      <h2>Why use Advice-O-Tron 5000?</h2>
+      <section>
+        <h3>Reason #1</h3>
+        <p>Find yourself stranded alone somewhere and need advice? You're in luck!</p>
+      </section>
+      <section>
+        <h3>Reason #2</h3>
+        <p>Random advice is always better than no advice at all.</p>
+      </section>
+      <section>
+        <h3>Reason #3</h3>
+        <p>It's scientifically proven that giving random advice is a lot easier than taking advice.</p>
+      </section>
+    </aside>
+    <footer class="main-footer">
+      <p>A freeCodeCamp Chicago Local Study Group jam.</p>
+    </footer>
+  </div>
 
   <script>
     "use strict";
@@ -56,8 +58,6 @@
         console.log('API JSON Data: ', data);
         console.log('Advice: ', adviceText)
       });
-
-    console.log('Hello!');
   </script>
 </body>
 
