Improved look of advice and tweet button.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     </header>
     <article class="content">
       <h2>Here is some advice...</h2>
-      <p id="advice"></p>
-      <a href="#" id="tweet-button" target="_blank"><button>Tweet</button></a>
+      <div class="advice-container">
+        <p id="advice" class="advice-slip"></p>
+      </div>
+      <a href="#" id="tweet-button" target="_blank"><button class="tweet-button">Tweet</button></a>
     </article>
     <aside class="side">
       <h2>Why use Advice-O-Tron 5000?</h2>
