Revisions to copy on page.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1>Advice-O-Tron 5000 <span>advice when you need it</span></h1>
     </header>
     <article class="content">
-      <h2>Here is some advice...</h2>
+      <h2>Here's a random bit of advice...</h2>
       <div class="advice-container">
         <p id="advice" class="advice-slip"></p>
       </div>
@@ -24,15 +24,15 @@
       <h2>Why use Advice-O-Tron 5000?</h2>
       <section>
         <h3>Reason #1</h3>
-        <p>Find yourself stranded alone somewhere and need advice? You're in luck!</p>
+        <p>It's 25% better than the Advice-O-Tron 4000.</p>
       </section>
       <section>
         <h3>Reason #2</h3>
-        <p>Random advice is always better than no advice at all.</p>
+        <p>A bit of random advice is always better than no advice at all.</p>
       </section>
       <section>
         <h3>Reason #3</h3>
-        <p>It's scientifically proven that giving random advice is a lot easier than taking advice.</p>
+        <p>It's absolutely, completely, 100% free. (And you get what you pay for!)</p>
       </section>
     </aside>
     <footer class="main-footer">
