More visual styling tweaks.

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
       <a href="#" id="tweet-button" target="_blank"><button class="tweet-button">Tweet</button></a>
     </article>
     <aside class="side">
-      <h2>Why use Advice-O-Tron 5000?</h2>
-      <section>
-        <h3>Reason #1</h3>
-        <p>It's 25% better than the Advice-O-Tron 4000.</p>
-      </section>
-      <section>
-        <h3>Reason #2</h3>
-        <p>A bit of random advice is always better than no advice at all.</p>
-      </section>
-      <section>
-        <h3>Reason #3</h3>
-        <p>It's absolutely, completely, 100% free. (And you get what you pay for!)</p>
-      </section>
+      <h3>Reasons to use Advice-O-Tron 5000?</h2>
+        <section>
+          <h4>Reason #1</h4>
+          <p>It's 25% better than the Advice-O-Tron 4000.</p>
+        </section>
+        <section>
+          <h4>Reason #2</h4>
+          <p>A bit of random advice is always better than no advice at all.</p>
+        </section>
+        <section>
+          <h4>Reason #3</h4>
+          <p>It's absolutely, completely, 100% free. (And you get what you pay for!)</p>
+        </section>
     </aside>
     <footer class="main-footer">
       <p>A freeCodeCamp Chicago Local Study Group jam.</p>
