Update footer info and styling.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     </aside>
     <footer class="main-footer">
       <p>A freeCodeCamp Chicago Local Study Group jam.</p>
+      <p>The random advice feed is powered by <a href="https://api.adviceslip.com/">Advice Slip JSON
+          API</a> created by <a href="https://tomkiss.net/">Tom Kiss</a>.</p>
     </footer>
   </div>
 
