Fix tweet button.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="advice-container">
         <p id="advice" class="advice-slip"></p>
       </div>
-      <a href="#" id="tweet-button" target="_blank"><button class="tweet-button">Tweet</button></a>
+      <a href="#" id="tweet-button" class="tweet-button" target="_blank"><button>Tweet</button></a>
     </article>
     <aside class="side">
       <h3>Reasons to use Advice-O-Tron 5000?</h2>
