--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
     </aside>
     <footer class="main-footer">
       <p>A freeCodeCamp Chicago Local Study Group jam.</p>
-      <p>The random advice feed is powered by <a href="https://api.adviceslip.com/">Advice Slip JSON
-          API</a> created by <a href="https://tomkiss.net/">Tom Kiss</a>.</p>
+      <p>Design and functionality by <a href="https://twitter.com/RobertGroves">Robert Groves</a>.</p>
+      <p>The random advice feed is powered by <a href=" https://api.adviceslip.com/">Advice Slip JSON
+          API</a> created by <a href="https://tomkiss.net/">Tom Kiss</a>.
+      </p>
     </footer>
   </div>
 
