--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <footer class="main-footer">
       <p>A freeCodeCamp Chicago Local Study Group jam.</p>
       <p>Design and functionality by <a href="https://twitter.com/RobertGroves">Robert Groves</a>.</p>
+      <p>Created with 🧠, ☕, HTML, CSS, and JavaScript.</p>
       <p>The random advice feed is powered by <a href=" https://api.adviceslip.com/">Advice Slip JSON
           API</a> created by <a href="https://tomkiss.net/">Tom Kiss</a>.
       </p>
